--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
                 <button id="global-start-stop">Start</button>
                 <button id="global-reset">Reset</button>
             </div>
+            <!-- Estructura del Theme Toggle agregada -->
+            <div class="theme-toggle">
+                <i class="fas fa-sun"></i>
+                <label class="switch">
+                    <input type="checkbox" id="theme-toggle-input">
+                    <span class="slider round"></span>
+                </label>
+                <i class="fas fa-moon"></i>
+            </div>
         </div>
     </header>
     <div class="main-container">
@@ -252,6 +261,7 @@
                 </div>
                 
                 <div class="optional-script">
+                    <!-- Javascript inline eliminado -->
                     <button class="collapsible-button">📖 Ver guion detallado (opcional)</button>
                     <div class="collapsible-content">
                         <p class="dialogue assistant">Ahora vamos a dar un paso gigante en nuestra misión. Vamos a aprender a crear 'ventanas' para ver nuestros datos. Abran el chat con XOLO y salúdenlo. XOLO ya los conoce y sabe exactamente qué les va a enseñar hoy sobre ThingSpeak y los plugins. No necesitan escribir un prompt especial, solo empiecen a platicar con él. Él les explicará cómo esos códigos extraños llamados placeholders se convierten en números reales en su pantalla. Pregúntenle todo lo que necesiten sobre cómo diseñar su widget.</p>
@@ -314,6 +324,7 @@
                     </div>
                 </div>
                 <div class="optional-script">
+                    <!-- Javascript inline eliminado -->
                     <button class="collapsible-button">📖 Ver guion detallado (opcional)</button>
                     <div class="collapsible-content">
                         <p class="dialogue assistant">¡Es hora de crear! Vamos a pasar de los datos crudos a una interfaz con estilo. Usen el prompt en pantalla para que XOLO los guíe en la creación de su propio widget. Piensen en el 'vibe': ¿quieren algo técnico o algo más ecológico? Por ejemplo, podrían hacer un monitor de humedad para una planta con un vibe 'eco-friendly' que use íconos de hojas. Una vez que tengan su GCS, llévenlo a ThingSpeak, configuren su plugin y vean cómo cobran vida sus datos. Si tienen errores o dudas con el HTML o los placeholders, pregúntenle a XOLO, él los ayudará a depurar. ¡A experimentar!</p>
@@ -434,4 +445,4 @@
     </div>
     <script src="script.js"></script>
 </body>
-</html></html>
+</html>
